--- a/StudentBioReal.html
+++ b/StudentBioReal.html
@@ -2,19 +2,23 @@
 <html>
   <head>
     <title>Student Bio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   	<h1>Student Bio</h1>
   	<h2>Claire Durst</h2>
   <body>
- 	<img src="https://therufusway.files.wordpress.com/2013/05/tumblr_mgfsjkpqcx1rdzt86o1_500.jpg">   
- 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dictum auctor nisi eu varius. Sed eu dapibus odio. Cras condimentum, urna ac iaculis vestibulum, velit felis mollis augue, eu tristique ligula urna eu mi. Mauris maximus fringilla libero, a venenatis elit. Quisque sed lorem a arcu dictum pretium sagittis at dolor. Nullam tristique sit amet lectus at dapibus. Vestibulum tristique facilisis enim. Curabitur ornare tempor fermentum. Aliquam cursus consectetur velit vel maximus. Aliquam vitae aliquet sem, eget ultricies neque. Praesent iaculis metus nec tortor finibus tincidunt. In ornare posuere risus, nec rutrum neque volutpat eget. In varius aliquam neque, et pretium justo mollis in. Etiam ac dolor vehicula, tristique lacus ac, fermentum libero.</p>
+ 	<img src="https://therufusway.files.wordpress.com/2013/05/tumblr_mgfsjkpqcx1rdzt86o1_500.jpg"> 
+  <div></div>
+  <h3>HEADSHOT IMAGE TO BE POSTED</h3>  
+ 	<p>Claire Durst, a Maryland native, graduated Drew University in 2015. There she obtained a Bachelor's Degree in Sociology with a minor in Arts Administration, with a focus on nonprofit management. Claire also served on the University admissions department as a tour guide and sang in multiple choirs.</p>
 
-	<p>Nulla facilisi. Proin auctor neque a blandit facilisis. Nam tempor urna sed metus dignissim, eu pulvinar erat placerat. Aenean vel dictum orci. Ut vestibulum tempor urna at ornare. Mauris et odio eu augue vestibulum semper. In ultrices metus ut elementum auctor. Morbi eleifend magna quis quam dignissim, id gravida lacus ornare. Proin eu mattis lorem, in facilisis justo. Ut porttitor, nisl sed vehicula auctor, arcu justo tincidunt metus, et fermentum tortor nulla varius ligula. Ut nec mi ullamcorper, pellentesque nisl in, tempus risus.</p>
-	<h3> Contact Info</h3>
+	<p>Afer college, Claire served a year of service in the AmeriCorps NCC (National Civilian Community Corps) in her home town. There she worked with the nonprofit Rebuilding Together Montgomery County. Her main duty was to repair low-income homes and help other groups in the area to serve their community. Since her term ended she has decided to take on a new skill, coding.</p>
+	<h4> Contact Info</h4>
 	<ul>
-		<li><b>Email: </b><a href="mailto:clairedurst@gmail.com">clairedurst@gmail.com</a></li>
+		<li><b>Email: </b><a href="mailto:clairedurst@gmail.com">clairedurst@gmail.com</a>
 		<li><b>Github: </b><a href="http://gw.bootcampcontent.com/clairedurst">ClaireDurst</a></li>
 		<li><b>Portfolio: </b><a href="http://gw.bootcampcontent.com/clairedurst">Coming Soon</a></li>
 	</ul>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/dpeXRbMkwSk" frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
