--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <p> Claire Durst, a Maryland native, graduated Drew University in 2015. There she obtained a Bachelor's Degree in Sociology with a minor in Arts Administration, with a focus on nonprofit management. Claire also served on the University admissions department as a tour guide and sang in multiple choirs. After serving a year in AmeriCorps she has decided to take on a new skill, coding.</p>
 	</div>
   <div id=picturelink>
-    <h4> Get In Touch With Me </h4>
-    <img src="assets/images/if_github_social_media_logo_1531637">
-    <img src="">
-    <img src="">
+    <h4><u> Get In Touch With Me </u></h4>
+
+    <a href="https://www.linkedin.com/in/claire-durst-3124a674/"><img src="https://cdn2.iconfinder.com/data/icons/linkedin-ui-flat/48/LinkedIn_UI-03-64.png"></img></a>
+    <a href="https://github.com/ClaireDurst"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/stackoverflow-64.png"></img></a>
+    <a href="https://stackoverflow.com/users/8313486/claire-durst"><img src="https://cdn2.iconfinder.com/data/icons/social-media-free-9/32/github_social_media_logo-64.png"></img></a>
 
   </div>
   </body>
