--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
     </header>
 
 <div class="container">
+
+<h2> Write Me A Message </h2>
+
+<div id= "lines"></div>
   
   <section id="action"
   <form action="/action_page.php">
@@ -36,6 +40,18 @@
 </div>
   
   </div>
+
+<div id="picturelink">
+    <h4> Get In Touch With Me </h4>
+
+    <div id="liner"></div>
+
+    <a href="https://www.linkedin.com/in/claire-durst-3124a674/"><img src="https://cdn2.iconfinder.com/data/icons/linkedin-ui-flat/48/LinkedIn_UI-03-64.png"></img></a>
+    <a href="https://github.com/ClaireDurst"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/stackoverflow-64.png"></img></a>
+    <a href="https://stackoverflow.com/users/8313486/claire-durst"><img src="https://cdn2.iconfinder.com/data/icons/social-media-free-9/32/github_social_media_logo-64.png"></img></a>
+
+  </div>
+
   <div id="foot">
 
     <footer>
