--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
    
     <div id= "address">
   <ul id= "menu">
-  <li>|</li>
   <li role="presentation" class="active"><a href="#">About</a></li>
   <li role="presentation"><a href="#">Portfolio</a></li>
   <li role="presentation"><a href="#">Contact</a></li>
@@ -26,6 +25,8 @@
 	</div>
   <div id=picturelink>
     <h4><u> Get In Touch With Me </u></h4>
+
+    <div id= "lining"> </div>
 
     <a href="https://www.linkedin.com/in/claire-durst-3124a674/"><img src="https://cdn2.iconfinder.com/data/icons/linkedin-ui-flat/48/LinkedIn_UI-03-64.png"></img></a>
     <a href="https://github.com/ClaireDurst"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/stackoverflow-64.png"></img></a>
