--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,14 @@
 </ul>
   </div>
     </header>
+
+    <div id="container">
+	
+
+    </div>
 <div id="picturelink">
-    <h4><u> Get In Touch With Me </u></h4>
+    <h4>Get In Touch With Me</h4>
+    <div id= "liner"></div>
 
     <a href="https://www.linkedin.com/in/claire-durst-3124a674/"><img src="https://cdn2.iconfinder.com/data/icons/linkedin-ui-flat/48/LinkedIn_UI-03-64.png"></img></a>
     <a href="https://github.com/ClaireDurst"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/stackoverflow-64.png"></img></a>
