--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,10 @@
     </header>
 
     <div id="container">
-	
+	<img src="">
+	<img src="">
+	<img src="">
+	<img src="">
 
     </div>
 <div id="picturelink">
